# qognify

./: Cargo.toml  readme.md
src/: main.rs
src/app/: mod.rs  myapp.rs
src/app/regression/: linear_regression_view.rs  mod.rs
src/core/: mod.rs
src/core/ai/regression/: linear_regression.rs  mod.rs
