[package]
name = "qognify"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.33.2", features = ["wgpu"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
ndarray-rand = "0.16.0"
rand = "0.9.2"
